--- a/dignifi_turo_card_v2.html
+++ b/dignifi_turo_card_v2.html
@@ -230,7 +230,7 @@
                 <div class="card-details">
                     <div class="cardholder-name">John Smith</div>
                     <div class="detail-line">1234 5678 9012 0087</div>
-                    <div class="detail-line">Capital One® Spark® Since 2022</div>
+                    <div class="detail-line">Since 2022</div>
                     <div class="detail-line">DigniFi Cardholder</div>
                 </div>
             </div>
