--- a/endurance_portal_enhanced_map.html
+++ b/endurance_portal_enhanced_map.html
@@ -577,17 +577,151 @@
         { id: 2, name: 'Downtown Service Center', address: '456 5th Ave, Franklin, TN 37174', distance: '1.2 mi', lat: 35.1750, lng: -86.8690 },
         { id: 3, name: 'DigniFi Express', address: '789 Commerce Ave, Franklin, TN 37174', distance: '2.1 mi', lat: 35.1760, lng: -86.8700 }
       ],
+      '37064': [
+        { id: 200, name: 'Franklin Motor Service', address: '1001 Murfreesboro Rd, Franklin, TN 37064', distance: '0.5 mi', lat: 35.1812, lng: -86.8620 },
+        { id: 201, name: 'Liberty Auto Repair', address: '1112 Riverside Dr, Franklin, TN 37064', distance: '1.0 mi', lat: 35.1825, lng: -86.8610 },
+        { id: 202, name: 'Premier Auto Care', address: '1223 Galleria Blvd, Franklin, TN 37064', distance: '1.6 mi', lat: 35.1840, lng: -86.8600 }
+      ],
+      '37065': [
+        { id: 203, name: 'Franklin East Service', address: '1445 Columbia Ave, Franklin, TN 37065', distance: '0.4 mi', lat: 35.1880, lng: -86.8500 },
+        { id: 204, name: 'Automotive Excellence', address: '1556 Natchez Trace, Franklin, TN 37065', distance: '1.1 mi', lat: 35.1895, lng: -86.8510 },
+        { id: 205, name: 'DigniFi Franklin Center', address: '1667 Liberty Pike, Franklin, TN 37065', distance: '1.7 mi', lat: 35.1910, lng: -86.8490 }
+      ],
+      '37069': [
+        { id: 206, name: 'Williamson County Auto', address: '2001 Del Rio Pike, Franklin, TN 37069', distance: '0.6 mi', lat: 35.1950, lng: -86.8420 },
+        { id: 207, name: 'Reliable Service Hub', address: '2112 McEwen Dr, Franklin, TN 37069', distance: '1.2 mi', lat: 35.1965, lng: -86.8410 },
+        { id: 208, name: 'Quick Turn Auto', address: '2223 Strickland Rd, Franklin, TN 37069', distance: '1.8 mi', lat: 35.1980, lng: -86.8395 }
+      ],
+      '37171': [
+        { id: 209, name: 'South Franklin Motors', address: '3001 Lewisburg Pike, Franklin, TN 37171', distance: '0.7 mi', lat: 35.1650, lng: -86.8750 },
+        { id: 210, name: 'DigniFi South Franklin', address: '3112 Goose Creek Rd, Franklin, TN 37171', distance: '1.3 mi', lat: 35.1635, lng: -86.8760 },
+        { id: 211, name: 'Certified Auto Repair', address: '3223 Nolensville Pike, Franklin, TN 37171', distance: '2.0 mi', lat: 35.1620, lng: -86.8770 }
+      ],
+      '37172': [
+        { id: 212, name: 'Heritage Auto Works', address: '4001 Peytonsville Rd, Franklin, TN 37172', distance: '0.5 mi', lat: 35.1550, lng: -86.8680 },
+        { id: 213, name: 'Precision Service Center', address: '4112 Clovercroft Rd, Franklin, TN 37172', distance: '1.1 mi', lat: 35.1535, lng: -86.8690 },
+        { id: 214, name: 'Franklin West Auto', address: '4223 Columbia Pike, Franklin, TN 37172', distance: '1.7 mi', lat: 35.1520, lng: -86.8700 }
+      ],
       '37067': [
         { id: 4, name: 'Williamson Garage', address: '321 Oak Ln, Brentwood, TN 37067', distance: '0.8 mi', lat: 35.7829, lng: -86.7823 },
         { id: 5, name: 'Quick Fix Auto', address: '654 Maple Dr, Brentwood, TN 37067', distance: '1.5 mi', lat: 35.7845, lng: -86.7840 },
         { id: 6, name: 'Elite Service Pros', address: '987 Elm St, Brentwood, TN 37067', distance: '2.0 mi', lat: 35.7860, lng: -86.7860 },
         { id: 7, name: 'Brentwood Auto Works', address: '234 Concord Ave, Brentwood, TN 37067', distance: '1.1 mi', lat: 35.7835, lng: -86.7850 }
       ],
+      '37027': [
+        { id: 215, name: 'Brentwood Premier Service', address: '5001 Maryland Way, Brentwood, TN 37027', distance: '0.4 mi', lat: 35.7900, lng: -86.7750 },
+        { id: 216, name: 'DigniFi Brentwood Express', address: '5112 Saundersville Rd, Brentwood, TN 37027', distance: '0.9 mi', lat: 35.7915, lng: -86.7740 },
+        { id: 217, name: 'Quality Auto Solutions', address: '5223 Moores Lane, Brentwood, TN 37027', distance: '1.4 mi', lat: 35.7930, lng: -86.7730 },
+        { id: 218, name: 'Brentwood Automotive Hub', address: '5334 Franklin Rd, Brentwood, TN 37027', distance: '1.9 mi', lat: 35.7945, lng: -86.7720 }
+      ],
+      '37076': [
+        { id: 219, name: 'South Brentwood Auto', address: '6001 Edmondson Pike, Brentwood, TN 37076', distance: '0.5 mi', lat: 35.7750, lng: -86.7680 },
+        { id: 220, name: 'Brentwood Tech Service', address: '6112 Williamson Pike, Brentwood, TN 37076', distance: '1.0 mi', lat: 35.7735, lng: -86.7690 },
+        { id: 221, name: 'Certified Brentwood Center', address: '6223 Beatty Creek Rd, Brentwood, TN 37076', distance: '1.5 mi', lat: 35.7720, lng: -86.7700 }
+      ],
       '37205': [
         { id: 8, name: 'Nashville Auto Works', address: '111 Broadway, Nashville, TN 37205', distance: '0.5 mi', lat: 36.1627, lng: -86.7816 },
         { id: 9, name: 'Music City Repairs', address: '222 Music Valley Dr, Nashville, TN 37205', distance: '1.1 mi', lat: 36.1640, lng: -86.7830 },
         { id: 10, name: 'Broadway Service Center', address: '333 Broadway Ave, Nashville, TN 37205', distance: '0.7 mi', lat: 36.1635, lng: -86.7825 },
         { id: 11, name: 'East Nashville Auto', address: '444 Main St E, Nashville, TN 37205', distance: '1.8 mi', lat: 36.1655, lng: -86.7800 }
+      ],
+      '37222': [
+        { id: 222, name: 'Green Hills Motors', address: '7104 Hillsboro Pike, Nashville, TN 37222', distance: '0.6 mi', lat: 36.0820, lng: -86.8090 },
+        { id: 223, name: 'Southwest Nashville Service', address: '7215 Williamson Ave, Nashville, TN 37222', distance: '1.1 mi', lat: 36.0835, lng: -86.8100 }
+      ],
+      // CHICAGOLAND ZIP CODES
+      '60601': [
+        { id: 300, name: 'Loop Auto Service Center', address: '233 S Wacker Dr, Chicago, IL 60601', distance: '0.3 mi', lat: 41.8787, lng: -87.6356 },
+        { id: 301, name: 'Downtown Chicago Motors', address: '100 E Randolph St, Chicago, IL 60601', distance: '0.7 mi', lat: 41.8833, lng: -87.6278 },
+        { id: 302, name: 'DigniFi Chicago Loop', address: '311 S Wacker Dr, Chicago, IL 60601', distance: '1.1 mi', lat: 41.8765, lng: -87.6375 }
+      ],
+      '60610': [
+        { id: 303, name: 'Gold Coast Auto Repair', address: '900 N Michigan Ave, Chicago, IL 60610', distance: '0.5 mi', lat: 41.8908, lng: -87.6242 },
+        { id: 304, name: 'Magnificent Mile Service', address: '835 N Michigan Ave, Chicago, IL 60610', distance: '0.9 mi', lat: 41.8896, lng: -87.6254 },
+        { id: 305, name: 'River North Motors', address: '440 N LaSalle St, Chicago, IL 60610', distance: '1.4 mi', lat: 41.8888, lng: -87.6321 }
+      ],
+      '60614': [
+        { id: 306, name: 'Lincoln Park Auto Works', address: '2225 N Clybourn Ave, Chicago, IL 60614', distance: '0.4 mi', lat: 41.9158, lng: -87.6489 },
+        { id: 307, name: 'Clybourn Garage', address: '2400 N Clybourn Ave, Chicago, IL 60614', distance: '1.0 mi', lat: 41.9178, lng: -87.6512 },
+        { id: 308, name: 'DigniFi Lincoln Park', address: '2800 N Ashland Ave, Chicago, IL 60614', distance: '1.5 mi', lat: 41.9235, lng: -87.6672 }
+      ],
+      '60640': [
+        { id: 309, name: 'Uptown Service Hub', address: '4545 N Broadway, Chicago, IL 60640', distance: '0.6 mi', lat: 41.9639, lng: -87.6419 },
+        { id: 310, name: 'Broadway Auto Center', address: '4800 N Broadway, Chicago, IL 60640', distance: '1.1 mi', lat: 41.9705, lng: -87.6419 },
+        { id: 311, name: 'Uptown Motors', address: '5050 N Sheridan Rd, Chicago, IL 60640', distance: '1.7 mi', lat: 41.9760, lng: -87.6387 }
+      ],
+      '60619': [
+        { id: 312, name: 'South Shore Auto Repair', address: '1700 E 75th St, Chicago, IL 60619', distance: '0.5 mi', lat: 41.7598, lng: -87.5845 },
+        { id: 313, name: 'South Chicago Service', address: '7900 S South Shore Dr, Chicago, IL 60619', distance: '1.2 mi', lat: 41.7564, lng: -87.5923 },
+        { id: 314, name: 'DigniFi South Shore', address: '8200 S Brandon Ave, Chicago, IL 60619', distance: '1.8 mi', lat: 41.7540, lng: -87.5878 }
+      ],
+      '60637': [
+        { id: 315, name: 'Woodlawn Motors', address: '6300 S Cottage Grove Ave, Chicago, IL 60637', distance: '0.4 mi', lat: 41.7963, lng: -87.6034 },
+        { id: 316, name: 'Cottage Grove Auto', address: '6500 S Cottage Grove Ave, Chicago, IL 60637', distance: '0.9 mi', lat: 41.7930, lng: -87.6045 },
+        { id: 317, name: 'South Chicago Motors', address: '6800 S Stony Island Ave, Chicago, IL 60637', distance: '1.5 mi', lat: 41.7895, lng: -87.5878 }
+      ],
+      '60651': [
+        { id: 318, name: 'West Side Auto Service', address: '3100 W Congress Pkwy, Chicago, IL 60651', distance: '0.5 mi', lat: 41.8337, lng: -87.6856 },
+        { id: 319, name: 'Congress Garage', address: '3400 W Congress Pkwy, Chicago, IL 60651', distance: '1.0 mi', lat: 41.8329, lng: -87.6907 },
+        { id: 320, name: 'DigniFi West Chicago', address: '3700 W Harrison St, Chicago, IL 60651', distance: '1.5 mi', lat: 41.8251, lng: -87.7001 }
+      ],
+      '60657': [
+        { id: 321, name: 'Lakeview Auto Center', address: '3333 N Clark St, Chicago, IL 60657', distance: '0.4 mi', lat: 41.9447, lng: -87.6440 },
+        { id: 322, name: 'Wrigleyville Motors', address: '3639 N Clark St, Chicago, IL 60657', distance: '0.8 mi', lat: 41.9491, lng: -87.6420 },
+        { id: 323, name: 'Lakeview Service Pro', address: '3900 N Sheffield Ave, Chicago, IL 60657', distance: '1.3 mi', lat: 41.9525, lng: -87.6546 }
+      ],
+      '60201': [
+        { id: 324, name: 'Evanston Auto Repair', address: '1630 Maple Ave, Evanston, IL 60201', distance: '0.5 mi', lat: 42.0455, lng: -87.6876 },
+        { id: 325, name: 'Central Evanston Service', address: '1850 Central St, Evanston, IL 60201', distance: '1.0 mi', lat: 42.0497, lng: -87.6923 },
+        { id: 326, name: 'DigniFi Evanston', address: '2100 Ridge Ave, Evanston, IL 60201', distance: '1.4 mi', lat: 42.0565, lng: -87.6831 }
+      ],
+      '60076': [
+        { id: 327, name: 'Skokie Auto Works', address: '4500 Oakton St, Skokie, IL 60076', distance: '0.5 mi', lat: 42.0332, lng: -87.7434 },
+        { id: 328, name: 'Dempster Motors', address: '4800 Dempster St, Skokie, IL 60076', distance: '1.1 mi', lat: 42.0259, lng: -87.7356 },
+        { id: 329, name: 'DigniFi Skokie Service', address: '5100 Lincoln Ave, Skokie, IL 60076', distance: '1.6 mi', lat: 42.0301, lng: -87.7201 }
+      ],
+      '60173': [
+        { id: 330, name: 'Schaumburg Auto Service', address: '1001 N Roselle Rd, Schaumburg, IL 60173', distance: '0.4 mi', lat: 42.0456, lng: -88.0789 },
+        { id: 331, name: 'Schaumburg Motors', address: '1300 S Roselle Rd, Schaumburg, IL 60173', distance: '0.9 mi', lat: 42.0356, lng: -88.0801 },
+        { id: 332, name: 'DigniFi Schaumburg Hub', address: '1600 N Springinsguth Rd, Schaumburg, IL 60173', distance: '1.4 mi', lat: 42.0489, lng: -88.0634 },
+        { id: 333, name: 'Woodfield Auto Center', address: '1900 E Woodfield Rd, Schaumburg, IL 60173', distance: '1.9 mi', lat: 42.0278, lng: -88.0523 }
+      ],
+      '60004': [
+        { id: 334, name: 'Arlington Heights Auto', address: '701 W Campbell St, Arlington Heights, IL 60004', distance: '0.5 mi', lat: 42.0738, lng: -87.9856 },
+        { id: 335, name: 'Campbell Service Center', address: '1000 W Campbell St, Arlington Heights, IL 60004', distance: '1.0 mi', lat: 42.0738, lng: -87.9956 },
+        { id: 336, name: 'DigniFi Arlington Heights', address: '1200 N Arlington Heights Rd, Arlington Heights, IL 60004', distance: '1.5 mi', lat: 42.0823, lng: -87.9845 }
+      ],
+      '60515': [
+        { id: 337, name: 'Downers Grove Auto Works', address: '2200 Butterfield Rd, Downers Grove, IL 60515', distance: '0.4 mi', lat: 41.7789, lng: -88.0101 },
+        { id: 338, name: 'Butterfield Service Hub', address: '2600 Butterfield Rd, Downers Grove, IL 60515', distance: '0.9 mi', lat: 41.7823, lng: -88.0201 },
+        { id: 339, name: 'DigniFi Downers Grove', address: '3000 Pasquinelli Dr, Downers Grove, IL 60515', distance: '1.4 mi', lat: 41.7856, lng: -88.0301 }
+      ],
+      '60453': [
+        { id: 340, name: 'Oak Lawn Auto Service', address: '9300 S Cicero Ave, Oak Lawn, IL 60453', distance: '0.5 mi', lat: 41.7145, lng: -87.7434 },
+        { id: 341, name: 'Cicero Motors', address: '9600 S Cicero Ave, Oak Lawn, IL 60453', distance: '1.0 mi', lat: 41.7101, lng: -87.7445 },
+        { id: 342, name: 'DigniFi Oak Lawn', address: '10000 S Central Ave, Oak Lawn, IL 60453', distance: '1.5 mi', lat: 41.7056, lng: -87.7523 }
+      ],
+      '60411': [
+        { id: 343, name: 'Chicago Heights Motors', address: '16000 S Chicago Ave, Chicago Heights, IL 60411', distance: '0.5 mi', lat: 41.5078, lng: -87.6145 },
+        { id: 344, name: 'Heights Auto Works', address: '16400 S Exchange Ave, Chicago Heights, IL 60411', distance: '1.0 mi', lat: 41.5043, lng: -87.6101 },
+        { id: 345, name: 'DigniFi Chicago Heights', address: '16800 S Cottage Grove Ave, Chicago Heights, IL 60411', distance: '1.5 mi', lat: 41.5008, lng: -87.6089 }
+      ],
+      '60540': [
+        { id: 346, name: 'Naperville Auto Center', address: '151 S Washington St, Naperville, IL 60540', distance: '0.4 mi', lat: 41.7456, lng: -88.1456 },
+        { id: 347, name: 'Washington St Service', address: '201 S Washington St, Naperville, IL 60540', distance: '0.8 mi', lat: 41.7423, lng: -88.1456 },
+        { id: 348, name: 'DigniFi Naperville', address: '300 S Route 59, Naperville, IL 60540', distance: '1.3 mi', lat: 41.7389, lng: -88.1612 },
+        { id: 349, name: 'Naperville Motors Pro', address: '400 S Washington St, Naperville, IL 60540', distance: '1.8 mi', lat: 41.7356, lng: -88.1456 }
+      ],
+      '60504': [
+        { id: 350, name: 'Aurora Auto Service', address: '123 N Island Ave, Aurora, IL 60504', distance: '0.5 mi', lat: 41.7623, lng: -88.2834 },
+        { id: 351, name: 'Aurora Motors Hub', address: '300 N Island Ave, Aurora, IL 60504', distance: '1.0 mi', lat: 41.7678, lng: -88.2856 },
+        { id: 352, name: 'DigniFi Aurora', address: '500 S Lincoln Ave, Aurora, IL 60504', distance: '1.5 mi', lat: 41.7523, lng: -88.2945 },
+        { id: 353, name: 'Fox Valley Auto Works', address: '700 S Lake St, Aurora, IL 60504', distance: '2.0 mi', lat: 41.7434, lng: -88.3001 }
+      ],
+      '60432': [
+        { id: 354, name: 'Joliet Auto Service Center', address: '1 S Chicago St, Joliet, IL 60432', distance: '0.4 mi', lat: 41.5234, lng: -88.0967 },
+        { id: 355, name: 'Chicago St Motors', address: '50 S Chicago St, Joliet, IL 60432', distance: '0.9 mi', lat: 41.5201, lng: -88.0978 },
+        { id: 356, name: 'DigniFi Joliet', address: '100 N Raney Ave, Joliet, IL 60432', distance: '1.4 mi', lat: 41.5278, lng: -88.0923 }
       ],
       '37201': [
         { id: 12, name: 'Downtown Nashville Service', address: '101 Commerce St, Nashville, TN 37201', distance: '0.2 mi', lat: 36.1593, lng: -86.7795 },
