--- a/Unified_Welcome_Email.html
+++ b/Unified_Welcome_Email.html
@@ -211,6 +211,13 @@
                 Thank you for choosing DigniFi! We're excited to partner with you and help you offer pay-over-time financing options to your customers.
             </div>
 
+            <!-- Kelsey Signoff -->
+            <p style="font-size: 14px; color: #666; margin: 20px 0 30px 0; line-height: 1.6;">
+                Best regards,<br>
+                <strong style="color: #c41e3a;">Kelsey Rookard</strong><br>
+                DigniFi Account Manager
+            </p>
+
             <!-- Account Manager Intro -->
             <div class="account-manager-intro">
                 <p>Your dedicated Account Manager:</p>
