--- a/Unified_Welcome_Email.html
+++ b/Unified_Welcome_Email.html
@@ -222,7 +222,7 @@
             <div class="account-manager-intro">
                 <p>Your dedicated Account Manager:</p>
                 <p class="account-manager-name">Kelsey Rookard</p>
-                <p>Kelsey.Rookard@DigniFi.com | 123-456-7890</p>
+                <p><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="83c8e6eff0e6faadd1ecece8e2f1e7c3c7eae4edeac5eaade0ecee">[email&#160;protected]</a> | 123-456-7890</p>
                 <p style="margin-top: 12px; font-size: 13px; color: #666;">I'm here to support your success. Reach out anytime with questions!</p>
             </div>
 
@@ -230,7 +230,7 @@
             <div class="cta-section">
                 <h2>📚 Schedule Your Training</h2>
                 <p>Complete your required 30-minute onboarding session to get started. Our training covers everything you need to know to maximize approvals and revenue.</p>
-                <a href="[TRAINING_SCHEDULING_LINK]" class="cta-button">Schedule Now</a>
+                <a href="https://calendly.com/d/cwfj-y2p-8q9/dignifi-bnpl-virtual-training-session" class="cta-button">Schedule Now</a>
             </div>
 
             <!-- Resources -->
@@ -256,7 +256,7 @@
                 <h3>Questions?</h3>
                 <p>Our support team is ready to help.</p>
                 <p class="support-contact">
-                    <a href="mailto:merchantsupport@dignifi.com">merchantsupport@dignifi.com</a> | 
+                    <a href="/cdn-cgi/l/email-protection#dfb2baadbcb7beb1abacaaafafb0adab9fbbb6b8b1b6b9b6f1bcb0b2"><span class="__cf_email__" data-cfemail="ea878f9889828b849e999f9a9a85989eaa8e838d84838c83c4898587">[email&#160;protected]</span></a> | 
                     <a href="tel:+18558085861">855-808-5861</a>
                 </p>
             </div>
@@ -265,15 +265,3 @@
             <p style="margin-top: 30px; text-align: center; font-size: 14px; color: #666;">
                 Looking forward to a successful partnership!<br><br>
                 <strong>Kelsey Rookard</strong><br>
-                DigniFi Account Manager
-            </p>
-        </div>
-
-        <!-- Footer -->
-        <div class="footer">
-            <p>© 2025 DigniFi. All rights reserved.</p>
-            <p>P.O. Box 576, Bellevue, WA 98009-0576</p>
-        </div>
-    </div>
-</body>
-</html>
