--- a/Unified_Welcome_Email.html
+++ b/Unified_Welcome_Email.html
@@ -222,7 +222,7 @@
             <div class="account-manager-intro">
                 <p>Your dedicated Account Manager:</p>
                 <p class="account-manager-name">Kelsey Rookard</p>
-                <p><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="83c8e6eff0e6faadd1ecece8e2f1e7c3c7eae4edeac5eaade0ecee">[email&#160;protected]</a> | 123-456-7890</p>
+                <p>Kelsey.Rookard@DigniFi.com | 123-456-7890</p>
                 <p style="margin-top: 12px; font-size: 13px; color: #666;">I'm here to support your success. Reach out anytime with questions!</p>
             </div>
 
@@ -256,7 +256,7 @@
                 <h3>Questions?</h3>
                 <p>Our support team is ready to help.</p>
                 <p class="support-contact">
-                    <a href="/cdn-cgi/l/email-protection#dfb2baadbcb7beb1abacaaafafb0adab9fbbb6b8b1b6b9b6f1bcb0b2"><span class="__cf_email__" data-cfemail="ea878f9889828b849e999f9a9a85989eaa8e838d84838c83c4898587">[email&#160;protected]</span></a> | 
+                    <a href="mailto:merchantsupport@dignifi.com">merchantsupport@dignifi.com</a> | 
                     <a href="tel:+18558085861">855-808-5861</a>
                 </p>
             </div>
