--- a/Unified_Welcome_Email.html
+++ b/Unified_Welcome_Email.html
@@ -51,22 +51,6 @@
             font-size: 18px;
             margin-bottom: 10px;
         }
-        .account-manager-intro {
-            background-color: #f0f4f8;
-            padding: 20px;
-            border-left: 4px solid #c41e3a;
-            margin-bottom: 30px;
-            border-radius: 3px;
-        }
-        .account-manager-intro p {
-            margin-bottom: 8px;
-            font-size: 14px;
-        }
-        .account-manager-name {
-            font-weight: 600;
-            color: #c41e3a;
-            font-size: 15px;
-        }
         .cta-section {
             background: linear-gradient(135deg, #f0f4f8 0%, #e8ecf0 100%);
             padding: 30px;
@@ -141,6 +125,22 @@
             color: #666;
             font-style: italic;
             font-size: 12px;
+        }
+        .account-manager-intro {
+            background-color: #f0f4f8;
+            padding: 20px;
+            border-left: 4px solid #c41e3a;
+            margin-top: 30px;
+            border-radius: 3px;
+        }
+        .account-manager-intro p {
+            margin-bottom: 8px;
+            font-size: 14px;
+        }
+        .account-manager-name {
+            font-weight: 600;
+            color: #c41e3a;
+            font-size: 15px;
         }
         .support-section {
             background-color: #f9f9f9;
@@ -218,19 +218,11 @@
                 DigniFi Account Manager
             </p>
 
-            <!-- Account Manager Intro -->
-            <div class="account-manager-intro">
-                <p>Your dedicated Account Manager:</p>
-                <p class="account-manager-name">Kelsey Rookard</p>
-                <p>Kelsey.Rookard@DigniFi.com | 123-456-7890</p>
-                <p style="margin-top: 12px; font-size: 13px; color: #666;">I'm here to support your success. Reach out anytime with questions!</p>
-            </div>
-
             <!-- Primary CTA: Training -->
             <div class="cta-section">
                 <h2>📚 Schedule Your Training</h2>
                 <p>Complete your required 30-minute onboarding session to get started. Our training covers everything you need to know to maximize approvals and revenue.</p>
-                <a href="https://calendly.com/d/cwfj-y2p-8q9/dignifi-bnpl-virtual-training-session" class="cta-button">Schedule Now</a>
+                <a href="[TRAINING_SCHEDULING_LINK]" class="cta-button">Schedule Now</a>
             </div>
 
             <!-- Resources -->
@@ -265,3 +257,23 @@
             <p style="margin-top: 30px; text-align: center; font-size: 14px; color: #666;">
                 Looking forward to a successful partnership!<br><br>
                 <strong>Kelsey Rookard</strong><br>
+                DigniFi Account Manager
+            </p>
+
+            <!-- Account Manager Intro -->
+            <div class="account-manager-intro">
+                <p>Your dedicated Account Manager:</p>
+                <p class="account-manager-name">Kelsey Rookard</p>
+                <p>Kelsey.Rookard@DigniFi.com | 123-456-7890</p>
+                <p style="margin-top: 12px; font-size: 13px; color: #666;">I'm here to support your success. Reach out anytime with questions!</p>
+            </div>
+        </div>
+
+        <!-- Footer -->
+        <div class="footer">
+            <p>© 2025 DigniFi. All rights reserved.</p>
+            <p>P.O. Box 576, Bellevue, WA 98009-0576</p>
+        </div>
+    </div>
+</body>
+</html>
