--- a/Unified_Welcome_Email.html
+++ b/Unified_Welcome_Email.html
@@ -45,6 +45,7 @@
             font-size: 16px;
             margin-bottom: 25px;
             color: #333;
+            line-height: 1.8;
         }
         .greeting strong {
             display: block;
@@ -208,54 +209,44 @@
             <!-- Personal Greeting -->
             <div class="greeting">
                 <strong>Hello [MERCHANT_NAME],</strong>
-                Thank you for choosing DigniFi! We're excited to partner with you and help you offer pay-over-time financing options to your customers.
+                Thank you for choosing DigniFi! We're excited to partner with you and help you offer pay-over-time financing options to your customers. Looking forward to a successful partnership!
             </div>
 
-            <!-- Kelsey Signoff -->
+            <!-- Signoff -->
             <p style="font-size: 14px; color: #666; margin: 20px 0 30px 0; line-height: 1.6;">
-                Best regards,<br>
                 <strong style="color: #c41e3a;">Kelsey Rookard</strong><br>
                 DigniFi Account Manager
             </p>
 
-            <!-- Primary CTA: Training -->
+            <!-- Combined CTA & Resources Box -->
             <div class="cta-section">
-                <h2>📚 Schedule Your Training</h2>
+                <h2 style="font-size: 20px; color: #c41e3a; margin-bottom: 25px; font-weight: 700; text-align: center; border-bottom: 2px solid #c41e3a; padding-bottom: 15px;">📋 Everything You Need</h2>
+
+                <h3 style="font-size: 16px; color: #333; margin-bottom: 15px; font-weight: 700;">📚 Schedule Your Training</h3>
                 <p>Complete your required 30-minute onboarding session to get started. Our training covers everything you need to know to maximize approvals and revenue.</p>
                 <a href="[TRAINING_SCHEDULING_LINK]" class="cta-button">Schedule Now</a>
-            </div>
 
-            <!-- Resources -->
-            <div class="next-section">
-                <h3>📋 Everything You Need</h3>
-                <p>We've prepared detailed guides to help you get up and running. See the attached documents for:</p>
-                <div class="attachment-list">
-                    <div class="attachment-item">
-                        <strong>📄 Merchant Onboarding Guide</strong><br>
-                        <em>Setup instructions, spiff program details, ACH configuration, compliance guidelines</em>
-                    </div>
-                    <div class="attachment-item">
-                        <strong>🎨 Marketing & Promotion Toolkit</strong><br>
-                        <em>Access your personalized marketing store, co-branded materials, digital assets</em>
+                <div style="margin-top: 25px; padding-top: 25px; border-top: 1px solid #e0e0e0;">
+                    <div style="background-color: #f0f4f8; padding: 15px; border-radius: 5px; text-align: left;">
+                        <div style="padding: 10px 0; font-size: 13px; border-bottom: 1px solid #e0e0e0;">
+                            <strong style="color: #333; display: block; margin-bottom: 4px;">📄 Merchant Onboarding Guide</strong>
+                            <em style="color: #666; font-style: italic; font-size: 12px;">Setup instructions, spiff program details, ACH configuration, compliance guidelines</em>
+                        </div>
+                        <div style="padding: 10px 0; font-size: 13px;">
+                            <strong style="color: #333; display: block; margin-bottom: 4px;">🎨 Marketing & Promotion Toolkit</strong>
+                            <em style="color: #666; font-style: italic; font-size: 12px;">Access your personalized marketing store, co-branded materials, digital assets</em>
+                        </div>
                     </div>
                 </div>
             </div>
 
             <div class="divider"></div>
 
-            <!-- Closing -->
-            <p style="margin-top: 30px; text-align: center; font-size: 14px; color: #666;">
-                Looking forward to a successful partnership!<br><br>
-                <strong>Kelsey Rookard</strong><br>
-                DigniFi Account Manager
-            </p>
-
             <!-- Account Manager Intro -->
             <div class="account-manager-intro">
                 <p>Your dedicated Account Manager:</p>
                 <p class="account-manager-name">Kelsey Rookard</p>
                 <p>Kelsey.Rookard@DigniFi.com | 123-456-7890</p>
-                <p style="margin-top: 12px; font-size: 13px; color: #666;">I'm here to support your success. Reach out anytime with questions!</p>
             </div>
 
             <!-- Support -->
