--- a/Unified_Welcome_Email.html
+++ b/Unified_Welcome_Email.html
@@ -224,7 +224,7 @@
 
                 <h3 style="font-size: 16px; color: #333; margin-bottom: 15px; font-weight: 700;">📚 Schedule Your Training</h3>
                 <p>Complete your required 30-minute onboarding session to get started. Our training covers everything you need to know to maximize approvals and revenue.</p>
-                <a href="[TRAINING_SCHEDULING_LINK]" class="cta-button">Schedule Now</a>
+                <a href="https://calendly.com/d/cwfj-y2p-8q9/dignifi-bnpl-virtual-training-session" class="cta-button">Schedule Now</a>
 
                 <div style="margin-top: 25px; padding-top: 25px; border-top: 1px solid #e0e0e0;">
                     <div style="background-color: #f0f4f8; padding: 15px; border-radius: 5px; text-align: left;">
