--- a/Unified_Welcome_Email.html
+++ b/Unified_Welcome_Email.html
@@ -209,7 +209,7 @@
             <!-- Personal Greeting -->
             <div class="greeting">
                 <strong>Hello [MERCHANT_NAME],</strong>
-                Thank you for choosing DigniFi! We're excited to partner with you and help you offer pay-over-time financing options to your customers. Looking forward to a successful partnership!
+                Thank you for choosing DigniFi. We're excited to partner with you and help you offer pay-over-time financing options to your customers. Looking forward to a successful partnership!
             </div>
 
             <!-- Signoff -->
