--- a/Unified_Welcome_Email.html
+++ b/Unified_Welcome_Email.html
@@ -224,16 +224,16 @@
 
                 <h3 style="font-size: 16px; color: #333; margin-bottom: 15px; font-weight: 700;">📚 Schedule Your Training</h3>
                 <p>Complete your required 30-minute onboarding session to get started. Our training covers everything you need to know to maximize approvals and revenue.</p>
-                <a href="https://calendly.com/d/cwfj-y2p-8q9/dignifi-bnpl-virtual-training-session" class="cta-button">Schedule Now</a>
+                <a href="https://calendly.com/d/cwfj-y2p-8q9/dignifi-bnpl-virtual-training-session" target="_blank" class="cta-button">Schedule Now</a>
 
                 <div style="margin-top: 25px; padding-top: 25px; border-top: 1px solid #e0e0e0;">
                     <div style="background-color: #f0f4f8; padding: 15px; border-radius: 5px; text-align: left;">
                         <div style="padding: 10px 0; font-size: 13px; border-bottom: 1px solid #e0e0e0;">
-                            <strong style="color: #333; display: block; margin-bottom: 4px; font-size: 16px;">📄 Merchant Onboarding Guide</strong>
+                            <strong style="color: #333; display: block; margin-bottom: 4px; font-size: 15px;">📄 Merchant Onboarding Guide</strong>
                             <em style="color: #666; font-style: italic; font-size: 12px;">Setup instructions, spiff program details, ACH configuration, compliance guidelines</em>
                         </div>
                         <div style="padding: 10px 0; font-size: 13px;">
-                            <strong style="color: #333; display: block; margin-bottom: 4px; font-size: 16px;">🎨 Marketing & Promotion Toolkit</strong>
+                            <strong style="color: #333; display: block; margin-bottom: 4px; font-size: 15px;">🎨 Marketing & Promotion Toolkit</strong>
                             <em style="color: #666; font-style: italic; font-size: 12px;">Access your personalized marketing store, co-branded materials, digital assets</em>
                         </div>
                     </div>
@@ -246,7 +246,7 @@
             <div class="account-manager-intro">
                 <p>Your dedicated Account Manager:</p>
                 <p class="account-manager-name">Kelsey Rookard</p>
-                <p>Kelsey.Rookard@DigniFi.com | 123-456-7890</p>
+                <p><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="4f042a233c2a36611d2020242e3d2b0f0b262821260926612c2022">[email&#160;protected]</a> | 123-456-7890</p>
             </div>
 
             <!-- Support -->
@@ -254,17 +254,5 @@
                 <h3>Questions?</h3>
                 <p>Our support team is ready to help.</p>
                 <p class="support-contact">
-                    <a href="mailto:merchantsupport@dignifi.com">merchantsupport@dignifi.com</a> | 
-                    <a href="tel:+18558085861">855-808-5861</a>
-                </p>
-            </div>
-        </div>
-
-        <!-- Footer -->
-        <div class="footer">
-            <p>© 2025 DigniFi. All rights reserved.</p>
-            <p>P.O. Box 576, Bellevue, WA 98009-0576</p>
-        </div>
-    </div>
-</body>
-</html>
+                    <a href="/cdn-cgi/l/email-protection#4d20283f2e252c23393e383d3d223f390d29242a23242b24632e2220"><span class="__cf_email__" data-cfemail="bbd6dec9d8d3dad5cfc8cecbcbd4c9cffbdfd2dcd5d2ddd295d8d4d6">[email&#160;protected]</span></a> | 
+                    <a href="tel:+18558085861">8
