--- a/Endurance_SC_Signup_Email.html
+++ b/Endurance_SC_Signup_Email.html
@@ -282,7 +282,7 @@
 
             <!-- Secondary CTA -->
             <div class="cta-container">
-                <a href="https://calendly.com/d/csk7-f6g-dkx/see-how-dignifi-helps-endurance-service-centers" class="cta-secondary">BOOK A DEMO</a>
+                <a href="https://calendly.com/d/csk7-f6g-dkx/see-how-dignifi-helps-endurance-service-centers" class="cta-secondary" target="_blank">BOOK A DEMO</a>
             </div>
 
             <!-- Closing -->
