--- a/Endurance_SC_Signup_Email.html
+++ b/Endurance_SC_Signup_Email.html
@@ -251,18 +251,18 @@
 
             <!-- Context -->
             <p class="section-text" style="margin-bottom: 20px;">
-                We've been notified you have a customer in-store who needs access to Pay-Over-Time financing due to an Endurance Warranty denial. We're here to help.
+                We've been notified you have a customer in-store who needs access to Pay-Over-Time financing. We're here to help!
             </p>
 
             <!-- Hero Message -->
             <div class="hero-message">
-                When a customer's repair isn't covered by warranty, you now have an option: offer them <span class="hero-highlight">financing through Endurance's preferred partner, DigniFi</span>. Help them complete their repair while expanding your service opportunities.
+                When a customer needs access to Pay-Over-Time financing, you now have an option: offer them <span class="hero-highlight">financing through Endurance's preferred partner, DigniFi</span>. Help them complete their repair while expanding your service opportunities.
             </div>
 
             <!-- What You Get -->
             <div class="section-headline">Why Offer This to Your Customers</div>
             <ul class="benefit-list">
-                <li><strong>Give customers payment options</strong> when they need repairs not covered by warranty</li>
+                <li><strong>Give customers payment options</strong> when they need repairs</li>
                 <li><strong>Payment plans</strong> tailored to their budget (12-36 month terms)</li>
                 <li><strong>Backed by Endurance</strong> — your customers already trust this brand</li>
                 <li><strong>Keep your service flowing</strong> — no operational complexity for you</li>
@@ -287,7 +287,7 @@
 
             <!-- Closing -->
             <p class="closing-text">
-                This is a new way to support your customers when warranty claims are denied. Enroll today to start offering this option.
+                This is a new way to support your customers when they need payment flexibility. Enroll today to start offering this option.
             </p>
 
             <div class="signature">
