--- a/Endurance_SC_Signup_Email.html
+++ b/Endurance_SC_Signup_Email.html
@@ -298,7 +298,7 @@
         <!-- Footer -->
         <div class="footer">
             <p style="margin: 0 0 10px 0;">
-                Financing provided by DigniFi, Endurance's preferred Pay Over Time financing partner.
+                Pay-Over-Time options provided by DigniFi, Endurance's preferred Pay-Over-Time financing partner.
             </p>
             <p style="margin: 0 0 12px 0; font-size: 10px;">
                 <a href="{{UNSUBSCRIBE_LINK}}" class="footer-link">Update preferences</a> | <a href="{{UNSUBSCRIBE_LINK}}" class="footer-link">Unsubscribe</a>
