--- a/Endurance_SC_Signup_Email.html
+++ b/Endurance_SC_Signup_Email.html
@@ -242,6 +242,7 @@
         <div class="header">
             <div class="logo-text">ENDURANCE</div>
             <div class="subheader">PREFERRED PAY OVER TIME FINANCING PARTNER</div>
+            <div class="subheader">Powered by Dignifi</div>
         </div>
 
         <!-- Main Content -->
